[package]
name = "tcp-server-client"
version = "0.1.0"
authors = ["oxb <oxb@zhijian.run>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name="client"
path="./src/client.rs"

[[bin]]
name="server"
path="./src/server.rs"

[dependencies]
